# Codex

./: .cursorrules  .env.production  .gitignore  .nav.md  ARCHITECTURE_DIAGRAM.md  AUDIT_REPORT.md  BARCODE_ROADMAP.md  CHANGELOG.md  CLAUDE.md  CODEX.md  CODE_AUDIT_REPORT.md  COMMIT_MESSAGE.txt  CONTEXT_SUMMARY.md  FLODEX_SERVICE_TEMPLATE.md  FLODEX_migration_proposal.md  FORENSIC_ANALYSIS_REPORT.md  FORENSIC_FIX_BUTTON_REF_ERROR.md  GEMINI.md  IA_MANIFESTO.md  MULTI_AGENT_COLLABORATION_PROTOCOL.md  PROFILE_IMPLEMENTATION_LOG.md  PROFILE_UI_STRUCTURE.md  PROMPT_FOR_GROK.md  QREABLE.md  QR_ENGINE_IMPLEMENTATION.md  QR_ENGINE_PROGRESS.md  QR_ENGINE_V2_100_PERCENT_ACTIVE.md  QR_ENGINE_V2_PROGRESS.md  README.md  STABILITY_IMPROVEMENTS.md  START_HERE.md  alert_rules.yml  alertmanager.yml  all-features-demo.html  check-effects-generation.sh  demo-qr-v2-features.sh  dev-start.sh  dev.sh  docker-compose.yml  ecosystem.config.cjs  (+38 more)
.backup/pre-merge-20250617/: page.tsx.backup  validate.ts.backup
.github/: pull_request_template.md
.github/workflows/: ci.yml
.husky/: pre-commit
.workspace/: README.md
.workspace/session-logs/: 2025-06-11-remember-me-failure.md
.workspace/templates/: session-log-template.md
backend/: .env  .env.example  .eslintrc.js  .prettierrc.cjs  README.md  backup_index.ts  eslint.config.js  jest.config.cjs  jest.config.js  package-lock.json  package.json  start-dev.sh  test-rate-limit.cjs  test-regular-user-live.sh  test-superadmin-live.sh  test-superadmin-rate-limit.sh  tsconfig.eslint.json  tsconfig.json
backend/coverage/: clover.xml  coverage-final.json  lcov.info
backend/prisma/: schema.prisma  seed.ts
backend/rust_generator/: Cargo.toml
backend/src/: config.ts  custom-types.d.ts  index.ts  server-config.ts  test-error-handling.ts
docs/: API_DOCUMENTATION.md  CODEX_DESIGN_SYSTEM.md  CONTEXT_SUMMARY.md  IMPLEMENTATION_SUMMARY_BATCH.md  QR_STUDIO_IMPLEMENTATION.md  QR_V3_OPTIMIZATION_PROGRESS.md  README.md  STICKY_COLUMN_ISSUE_PROMPT.md  SVG_GRADIENT_SYSTEM.md  TECHNICAL_IMPROVEMENTS_2025.md  TROUBLESHOOTING.md  UNDOCUMENTED_IMPROVEMENTS.md
docs/api/: README.md  v1-v2-migration-guide.md
docs/archive/: ACTION_PLAN.md  AUDIT_REPORT.md  CODEX.md  JULES_REPORT.md
docs/database/: README.md
docs/fixes/: UNIFIED_EYE_SHAPE_FIX.md  eye_shape_unified_mode.patch
docs/flodex/: AUDITOR_GUIDELINES.md  CROSS_SERVICE_FEATURES_GUIDE.md  DOCUMENTATION_POLICY.md
docs/forensic/: GEMINI_FORENSIC_STUDIO_ERROR_400_20250708.md  GEMINI_FRONTEND_URL_VALIDATION_ANALYSIS_20250626.md
docs/implementation/: CLAUDE_API_DOCUMENTATION_VERIFICATION_20250627.md  CLAUDE_ENTERPRISE_VALIDATOR_20250629.md  CLAUDE_SESSION_API_FIXES_20250626.md  CLAUDE_STICKY_POSITIONING_FORENSIC_FIX_20250701.md  CODEX_QR_ENHANCEMENT_PLAN_20250628.md  MARKETING_VS_CODE_ANALYSIS_20250630.md  native-exclusion-zone-progress.md  url-validation-fixes-20250617.md
docs/qr-engine/: README.md  (+20 more)
frontend/: .eslintrc.json  .gitignore  .prettierrc.mjs  README.md  STICKY_POSITIONING_SOLUTION.md  env.example  eslint.config.mjs  instrumentation-client.ts  next.config.js  next.config.ts  package-lock.json  package.json  playwright.config.ts  sentry.edge.config.ts  sentry.server.config.ts  start-dev.sh  start-prod.sh  sticky-implementation-problem.md  tailwind.config.js  test-sticky-actual.html  test-sticky-diagnosis.html  tsconfig.json  vitest.config.ts
rust_generator/: .env.example  .gitignore  API_DOCS.md  Cargo.toml  README.md  direct_rust_test_results_20250608_210052.json  direct_rust_test_results_20250608_210127.json  load_test_results_20250608_205459.json  load_test_results_20250608_205633.json  old_endpoint_test_20250608_210522.json  realistic_test_results_20250608_205801.json
rust_generator/benches/: qr_benchmarks.rs
rust_generator/examples/: test_boost_ecl.rs  test_eye_colors.rs  test_eye_contrast_validation.rs  test_fixed_size.rs  test_version_sizes.rs  visual_effects.rs
rust_generator/logs/: rust_generator.log.2025-04-15  rust_generator.log.2025-04-18  rust_generator.log.2025-04-19  rust_generator.log.2025-04-20
rust_generator/scripts/: direct_rust_load_test.py  load_test.py  load_test.sh  load_test_qr_engine.py  realistic_load_test.py  test_old_endpoint.py
rust_generator/src/: lib.rs  main.rs  test_boost_runner.rs  test_effects_integration.rs  validators.rs
rust_generator/src/cache/: distributed.rs  memory.rs  mod.rs  redis.rs
rust_generator/src/engine/: constants.rs  customizer.rs  ecl_optimizer.rs  ecl_optimizer_tests.rs  error.rs  generator.rs  generator_eye_fix.rs  geometry.rs  geometry_tests.rs  mod.rs  optimizer.rs  reporter.rs  router.rs  segmenter.rs  test_integration.rs  types.rs  validator.rs  zones.rs  zones_tests.rs
rust_generator/src/metrics/: mod.rs
rust_generator/src/models/: mod.rs  qr.rs
rust_generator/src/processing/: colors.rs  effects.rs  effects_backup.rs  effects_test.rs  gradients.rs  mod.rs
rust_generator/src/routes/: mod.rs  qr_v2.rs  qr_v2_fixed.rs  qr_v3.rs
rust_generator/src/shapes/: eyes.rs  frames.rs  mod.rs  patterns.rs
rust_generator/src/standards/: decoder.rs  gs1.rs  mod.rs  validator.rs
scripts/: README.md  add-js-extension.js  admin-load-test-v2.sh  admin-load-test.sh  analyze-exclusion-problem.js  authenticated-load-test.sh  automated-gradual-test.js  browser-token-test.sh  check-page-health-simple.js  check-page-health.js  debug-exclusion-scan.js  direct-rust-load-test.sh  flodex-metrics  flodex-metrics.cjs  gradual-load-test.js  intensive-load-test.sh  load-test-interactive.js  quick-gradual-test.sh  quick-load-test.sh  run-load-test.js  run-qr-benchmarks.sh  test-exclusion-debug.js  test-exclusion-direct.js  test-frontend-exclusion.js  test-native-exclusion.js  test-ui-exclusion.js  validate-environment.sh  validate-flodex.sh  validate-focus-v2.sh  validate-focus.sh  validate-nav-freshness.js
test-output/: exclusion-debug.json  exclusion-demo.html
(+518 files in other folders)
